feat(011): 系统统一性升级 — 表前缀规范化、单入口安装、死代码清理、RBAC 按钮权限、E2E 冒烟测试
- 数据库表前缀统一：admin 库 admin_*、cashier 库 cashier_*
- 安装脚本整合为 install_demo_db.py 单入口（含 Flyway 历史标记）
- 删除废弃 SQL/脚本/冗余资源文件
- 新增 RBAC 按钮级权限体系（V8 迁移 + 前端指令 + 拦截器）
- 新增 admin-client Playwright E2E 冒烟测试（7 项全通过）
- 新增 cashier-client E2E 基础测试框架
- 修复 CORS 双域名加载、收银台租户过滤绕过、菜单权限解析
- .gitignore 排除 test-results/playwright-report/logs 目录

Co-authored-by: Cursor <cursoragent@cursor.com>